--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">QuickMemo</string>
+    <string name="first_fragment_label">SampleLabel1</string>
+    <string name="second_fragment_label">SampleLabel2</string>
 </resources>
